--- a/make/compiler/Makefile.pathscale
+++ b/make/compiler/Makefile.pathscale
@@ -27,16 +27,15 @@ OPT_CFLAGS = -O3
 
 COMP_CFLAGS = $(CFLAGS)
 COMP_CFLAGS_NONCHPL = -Wno-error
-RUNTIME_CFLAGS = $(CFLAGS)
+RUNTIME_CFLAGS = -std=c99 $(CFLAGS)
 GEN_CFLAGS = -std=c99
 
 #
 # Flags for turning on warnings for C++/C code
 #
-WARN_CXXFLAGS = -Wall -Werror -Wno-unused -Wpointer-arith -Wwrite-strings
-WARN_CFLAGS = $(WARN_CXXFLAGS) -Wmissing-declarations -Wmissing-prototypes -Wstrict-prototypes -Wnested-externs -Wdeclaration-after-statement
+WARN_CXXFLAGS = -Wall -Werror -Wpointer-arith -Wwrite-strings
+WARN_CFLAGS = $(WARN_CXXFLAGS) -Wmissing-declarations -Wmissing-prototypes -Wstrict-prototypes -Wnested-externs -Wdeclaration-after-statement -Wmissing-format-attribute
 WARN_GEN_CFLAGS = $(WARN_CFLAGS) -Wno-unused
-
 
 #
 # developer settings
