Turning on IEEE-conformant flags by default for the generated code on the Intel and PGI compilers.  This should clear up most of the remaining Intel-specific regressions and ones that we would see on PGI if we were testing for it nightly.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13230 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/compiler/Makefile.intel
+++ b/make/compiler/Makefile.intel
@@ -30,7 +30,7 @@ PROFILE_LFLAGS = -pg
 COMP_CFLAGS = $(CFLAGS)
 COMP_CFLAGS_NONCHPL = -wr111,193,1418,1419
 RUNTIME_CFLAGS = -std=c99 $(CFLAGS)
-GEN_CFLAGS = -std=c99
+GEN_CFLAGS = -std=c99 -mp
 
 #
 # Warnings squashed for flex-/bison-generated code
