This should fix the broken xmt builds from last night.
Continued our approach of supporting runtime
include directories for aspects of the
environment other than platform by adding
a -I include based on compiler settings
named comp-$(CHPL_[HOST|TARGET]_COMPILER)/
This allows us to put any settings common to
the mta and xmt compilers into comp-cray-mta
rather than duplicating the code in mta/ and
xmt/ subdirectories.  Blew away old headers,
copying Sam's most recent changes from the
mta/ directory into the new include/comp-cray-mta
directory.

When we move to subversion, the xmt and mta
include subdirectories could be removed.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13242 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/make/Makefile.runtime.head
+++ b/runtime/make/Makefile.runtime.head
@@ -18,7 +18,7 @@ CHAPEL_SUBDIR = runtime/$(RUNTIME_SUBDIR)
 CHPL_MAKE_HOST_TARGET = --target
 include $(CHAPEL_ROOT)/make/Makefile.base
 
-INCL_CFLAGS = -I. -I$(RUNTIME_ROOT)/include/threads-$(CHPL_MAKE_THREADS) -I$(RUNTIME_ROOT)/include/comm-$(CHPL_MAKE_COMM) -I$(RUNTIME_ROOT)/include/$(CHPL_MAKE_PLATFORM) -I$(RUNTIME_ROOT)/include
+INCL_CFLAGS = -I. -I$(RUNTIME_ROOT)/include/threads-$(CHPL_MAKE_THREADS) -I$(RUNTIME_ROOT)/include/comm-$(CHPL_MAKE_COMM) -I$(RUNTIME_ROOT)/include/comp-$(CHPL_MAKE_COMPILER) -I$(RUNTIME_ROOT)/include/$(CHPL_MAKE_PLATFORM) -I$(RUNTIME_ROOT)/include
 RUNTIME_CFLAGS += $(INCL_CFLAGS)
 
 RUNTIME_OBJ_DIR = ./$(OBJ_SUBDIR)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
