--- a/runtime/etc/Makefile.include
+++ b/runtime/etc/Makefile.include
@@ -6,7 +6,7 @@ LD = $(CC)
 include $(CHAPEL_ROOT)/runtime/etc/Makefile.threads-$(CHPL_MAKE_THREADS)
 include $(CHAPEL_ROOT)/runtime/etc/Makefile.comm-$(CHPL_MAKE_COMM)
 
-CHAPEL_RT_INC_DIR = $(CHAPEL_ROOT)/runtime/include/threads-$(CHPL_MAKE_THREADS) -I$(CHAPEL_ROOT)/runtime/include/comm-$(CHPL_MAKE_COMM) -I$(CHAPEL_ROOT)/runtime/include
+CHAPEL_RT_INC_DIR = $(CHAPEL_ROOT)/runtime/include/threads-$(CHPL_MAKE_THREADS) -I$(CHAPEL_ROOT)/runtime/include/comm-$(CHPL_MAKE_COMM) -I$(CHAPEL_ROOT)/runtime/include/comp-$(CHPL_MAKE_COMPILER) -I$(CHAPEL_ROOT)/runtime/include
 CHAPEL_RT_LIB_DIR = $(CHAPEL_ROOT)/lib/$(OBJ_SUBDIR)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
 
 all: $(CHPL_CL_OBJS) FORCE
