using the common Makefile
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13342 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/madness/aniruddha/madchap/Makefile
+++ b/test/studies/madness/aniruddha/madchap/Makefile
@@ -2,12 +2,11 @@ GENC   = gen_c
 
 CHPL    = chpl
 CHPL_FLAGS  = --instantiate-max 512 --print-passes
-CHPL_FLAGS += -g
 #CHPL_FLAGS += -g --savec=$(GENC) --short-names
 #CHPL_FLAGS += --ccflags "-Wall"
 #CHPL_FLAGS += --no-cg-cpp-lines
 
-TESTFLAGS = --instantiate-max 512 -struncateAtEps=true
+TESTFLAGS = --instantiate-max 512
 
 SOURCES= AnalyticFcn.chpl  \
          FTree.chpl        \
