Attempting to remove the BUILD_VERSION file as follows:
- removed BUILD_VERSION
- added it (and lib/ and bin/) to the ignore
  properties for the root directory
- modified the compiler Makefiles to create a
  BUILD_VERSION file if one is necessary
- put all the logic for this into a new
  utility script updateBuildVersion.pl which
  is designed to work correctly for developers,
  non-developers, and releases whether or not
  CHPL_HOME is set.

In order to work for a release, this checkin
needs some changes to the gen_release scripts,
but I haven't gotten those working yet (and
can't until getting these files checked in).




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13400 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -6,7 +6,6 @@ COMPILER_ROOT=.
 COMPILER_SUBDIR = .
 
 
-
 #
 # subdirectories and false subdirectory-oriented targets to force recursion
 #
@@ -25,6 +24,12 @@ SUBDIRS = \
 # include standard header for compiler
 #
 include $(COMPILER_ROOT)/make/Makefile.compiler.head
+
+#
+# the location of the BUILD_VERSION file
+#
+BUILD_VERSION_FILE = $(CHAPEL_ROOT)/BUILD_VERSION
+
 
 
 #
@@ -58,6 +63,7 @@ CHPL_OBJS = \
 
 EXECS = $(CHPL)
 
+PRETARGETS = $(BUILD_VERSION_FILE)
 TARGETS = $(CHPL)
 
 
@@ -71,6 +77,9 @@ include $(COMPILER_ROOT)/make/Makefile.compiler.rules
 #
 # target-based rules
 #
+
+$(BUILD_VERSION_FILE): FORCE
+	@$(CHAPEL_ROOT)/util/updateBuildVersion.pl $(CHAPEL_ROOT)
 
 $(CHPL): $(CHPL_BIN_DIR) $(CHPL_OBJS)
 	$(CXX) $(LDFLAGS) -o $@ $(CHPL_OBJS) $(LIBS)
