Changing Makefile variables and files to refer to SVN rather than CVS (for purely aesthetic and grep reasons).
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13410 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/compiler/AST/Makefile.share
+++ b/compiler/AST/Makefile.share
@@ -13,8 +13,8 @@ AST_SRCS = \
 	type.cpp \
         view.cpp
 
-CVS_SRCS = $(AST_SRCS)
-SRCS = $(CVS_SRCS)
+SVN_SRCS = $(AST_SRCS)
+SRCS = $(SVN_SRCS)
 
 AST_OBJS = \
 	$(AST_SRCS:%.cpp=$(AST_OBJDIR)/%.$(OBJ_SUFFIX))
