--- a/compiler/adt/Makefile.share
+++ b/compiler/adt/Makefile.share
@@ -2,8 +2,8 @@ ADT_SRCS = \
 	map.cpp \
 	vec.cpp
 
-CVS_SRCS = $(ADT_SRCS)
-SRCS = $(CVS_SRCS)
+SVN_SRCS = $(ADT_SRCS)
+SRCS = $(SVN_SRCS)
 
 ADT_OBJS = \
 	$(ADT_SRCS:%.cpp=$(ADT_OBJDIR)/%.$(OBJ_SUFFIX))
