--- a/compiler/ifa/make_prims/Makefile
+++ b/compiler/ifa/make_prims/Makefile
@@ -16,9 +16,9 @@ include $(COMPILER_ROOT)/make/Makefile.compiler.head
 #
 
 MAKE_PRIMS = make_prims$(EXE_SUFFIX)
-MAKE_PRIMS_CVS_SRCS = \
+MAKE_PRIMS_SVN_SRCS = \
 	make_prims.cpp
-MAKE_PRIMS_SRCS = $(MAKE_PRIMS_CVS_SRCS)
+MAKE_PRIMS_SRCS = $(MAKE_PRIMS_SVN_SRCS)
 MAKE_PRIMS_OBJS = $(MAKE_PRIMS_SRCS:%.cpp=$(OBJ_SUBDIR)/%.o)
 
 
@@ -26,7 +26,7 @@ MAKE_PRIMS_OBJS = $(MAKE_PRIMS_SRCS:%.cpp=$(OBJ_SUBDIR)/%.o)
 # standard subdirectory variables
 #
 
-CVS_SRCS = $(MAKE_PRIMS_CVS_SRCS)
+SVN_SRCS = $(MAKE_PRIMS_SVN_SRCS)
 EXECS = $(MAKE_PRIMS)
 
 
