--- a/compiler/make/Makefile.compiler.commonrules
+++ b/compiler/make/Makefile.compiler.commonrules
@@ -5,7 +5,7 @@ clean: $(CLEANSUBDIRS) echocompilerdir
 	rm -f $(CLEAN_TARGS)
 
 cleandeps: $(CLEANSUBDIRDEPS) echocompilerdir
-	rm -f $(CVS_DEPENDS)
+	rm -f $(SVN_DEPENDS)
 
 clobber: $(CLOBBERSUBDIRS) echocompilerdir
 	rm -rf ./$(CLOBBER_TARGS)
