--- a/compiler/make/Makefile.compiler.rules
+++ b/compiler/make/Makefile.compiler.rules
@@ -4,6 +4,6 @@ include $(COMPILER_ROOT)/make/Makefile.compiler.commonrules
 depend: $(DEPENDSUBDIRS) $(DEPEND_DEPS) echocompilerdir
 	@echo Updating dependences...
 
-CVS_DEPS= $(CVS_SRCS:%.cpp=%.depend)
+SVN_DEPS= $(SVN_SRCS:%.cpp=%.depend)
 
-filedepend: $(CVS_DEPS)
+filedepend: $(SVN_DEPS)
