--- a/compiler/optimizations/Makefile.share
+++ b/compiler/optimizations/Makefile.share
@@ -6,8 +6,8 @@ OPTIMIZATIONS_SRCS = \
 	reachingDefinitionsAnalysis.cpp \
 	removeUnnecessaryGotos.cpp
 
-CVS_SRCS = $(OPTIMIZATIONS_SRCS)
-SRCS = $(CVS_SRCS)
+SVN_SRCS = $(OPTIMIZATIONS_SRCS)
+SRCS = $(SVN_SRCS)
 
 OPTIMIZATIONS_OBJS = \
 	$(OPTIMIZATIONS_SRCS:%.cpp=$(OPTIMIZATIONS_OBJDIR)/%.$(OBJ_SUFFIX))
