--- a/runtime/src/Makefile.share
+++ b/runtime/src/Makefile.share
@@ -17,8 +17,8 @@ COMMON_SRCS = \
 MAIN_SRCS = \
 	main.c \
 
-CVS_SRCS = $(COMMON_SRCS) $(MAIN_SRCS)
-SRCS = $(CVS_SRCS)
+SVN_SRCS = $(COMMON_SRCS) $(MAIN_SRCS)
+SRCS = $(SVN_SRCS)
 
 COMMON_OBJS = \
 	$(COMMON_SRCS:%.c=$(COMMON_OBJDIR)/%.o)
