--- a/compiler/make/Makefile.compiler.subdirrules
+++ b/compiler/make/Makefile.compiler.subdirrules
@@ -3,12 +3,12 @@ include $(COMPILER_ROOT)/make/Makefile.compiler.commonrules
 
 depend: $(DEPENDSUBDIRS) $(OBJ_SUBDIR_MADE) $(DEPEND_DEPS) echocompilerdir
 	@echo Updating dependences...
-	@rm -f $(CVS_DEPENDS).tmp
-	@echo > $(CVS_DEPENDS).tmp
+	@rm -f $(SVN_DEPENDS).tmp
+	@echo > $(SVN_DEPENDS).tmp
 	@$(MAKE) filedepend
 	$(OTHER_DEPEND_RULES)
-	@mv -f $(CVS_DEPENDS).tmp $(CVS_DEPENDS)
+	@mv -f $(SVN_DEPENDS).tmp $(SVN_DEPENDS)
 
-CVS_DEPS= $(CVS_SRCS:%.cpp=%.depend)
+SVN_DEPS= $(SVN_SRCS:%.cpp=%.depend)
 
-filedepend: $(CVS_DEPS)
+filedepend: $(SVN_DEPS)
