Add a --fast compiler switch. It makes sure all of the compiler optimizations that have flags are on, and turns off runtime checks. This can be overridden by specifying the more specific flags on the command line after --fast.
Also, added two compiler-specific Makefile variables, one that is used if
--fast is not specified, one that is used if it is. These are SAFE_GEN_CFLAGS
and FAST_GEN_CFLAGS.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13413 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/compiler/Makefile.cray-xt-pgi
+++ b/make/compiler/Makefile.cray-xt-pgi
@@ -1,6 +1,7 @@
 # put XT cross-compilation pgi-specific settings here
 
-XT_GEN_CFLAGS = -Kieee
+XT_GEN_CFLAGS = 
 XT_COMP_CFLAGS = --diag_suppress550
+SAFE_GEN_CFLAGS = -Kieee
 
 include $(CHAPEL_ROOT)/make/compiler/Makefile.cray-xt
