--- a/make/compiler/Makefile.cray-vec
+++ b/make/compiler/Makefile.cray-vec
@@ -21,8 +21,8 @@ RANLIB = ranlib
 
 DEBUG_CFLAGS = -g
 OPT_CFLAGS = 
-FAST_GEN_CFLAGS = -hfp2
-SAFE_GEN_CFLAGS = -hfp0
+NO_IEEE_FLOAT_GEN_CFLAGS = -hfp2
+IEEE_FLOAT_GEN_CFLAGS = -hfp0
 CFLAGS = -hcpu=cray-$(CHPL_MAKE_PLATFORM) -hgnu
 
 COMP_CFLAGS = $(CFLAGS)
