--- a/make/compiler/Makefile.pgi
+++ b/make/compiler/Makefile.pgi
@@ -28,7 +28,7 @@ OPT_CFLAGS = -O3
 COMP_CFLAGS = $(CFLAGS)
 COMP_CFLAGS_NONCHPL =
 RUNTIME_CFLAGS = $(CFLAGS)
-SAFE_GEN_CFLAGS = -Kieee
+IEEE_FLOAT_GEN_CFLAGS = -Kieee
 
 #
 # Flags for turning on warnings for C++/C code
