Changed the location of the BUILD_VERSION file It is not in compiler/main, the same directory that contains version_num.h, which #includes this file.  Hopefully, I have caught all the places that refer to this file.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13520 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -28,7 +28,7 @@ include $(COMPILER_ROOT)/make/Makefile.compiler.head
 #
 # the location of the BUILD_VERSION file
 #
-BUILD_VERSION_FILE = $(CHAPEL_ROOT)/BUILD_VERSION
+BUILD_VERSION_FILE = $(COMPILER_ROOT)/main/BUILD_VERSION
 
 
 
