Changed how the path for the BUILD_VERSION file is specified Updated the Makefile to match. This allows the Perl script to be used for both make and Xcode.  (The way it was done before worked for make, but not for Xcode.  I hadn't noticed this because I had not done a clean build.)
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13552 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -79,7 +79,7 @@ include $(COMPILER_ROOT)/make/Makefile.compiler.rules
 #
 
 $(BUILD_VERSION_FILE): FORCE
-	@$(CHAPEL_ROOT)/util/updateBuildVersion.pl $(CHAPEL_ROOT)
+	@$(CHAPEL_ROOT)/util/updateBuildVersion.pl $(CHAPEL_ROOT)/compiler/main
 
 $(CHPL): $(CHPL_BIN_DIR) $(CHPL_OBJS)
 	$(CXX) $(LDFLAGS) -o $@ $(CHPL_OBJS) $(LIBS)
