Fixed runtime TAGS file
Fixed the runtime Makefile to look at the runtime sources
when generating its TAGS file.

Note that the TAGS file only reflects the most recent
build -- so only the thread/comm layer that you most
recently built in a given directory.  We can change this
if this becomes an issue for people (but given that
nobody noticed the file was broken, I'm guessing it
may not be... :)




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13589 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -57,7 +57,7 @@ include $(RUNTIME_ROOT)/make/Makefile.runtime.rules
 $(RUNTIME_LIB): $(RUNTIME_OBJS) $(RUNTIME_DIR_TIMESTAMP)
 	$(AR) -rc $@ $(RUNTIME_OBJS)
 	$(RANLIB) $@
-	-@(which etags > /dev/null 2>&1 && echo "Updating TAGS..." && etags -o TAGS $(RUNTIME_SRCS) include/*.h include/threads-$(CHPL_MAKE_THREADS)/*.h include/comm-$(CHPL_MAKE_COMM)/*.h) || echo "etags not available"
+	-@(which etags > /dev/null 2>&1 && echo "Updating TAGS..." && etags -o TAGS $(ALL_SRCS) include/*.h include/threads-$(CHPL_MAKE_THREADS)/*.h include/comm-$(CHPL_MAKE_COMM)/*.h) || echo "etags not available"
 
 $(RUNTIME_DIR)/main.o: src/$(OBJ_SUBDIR)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)/main.o
 	cp $< $@
