Adding support for vim ctags
Made our Makefiles uses of etags more general to support
either ctags (the vim tags file utiliy) or etags (the emacs
tags file utility).  etags continues to be the default.

If you use vim for development primarily, you can set
the environment variable CHPL_EDITOR to "vim" and this
will cause the Makefiles to use ctags rather than etags
when creating tags files.  The vim default filename "tags"
will be used by default, so I added "tags" to the ignore
properties for runtime/ and compiler/.

vim users may want to read through the flags that ctags
supports and add any that they think would be useful to
the CHPL_TAGS_FLAGS variable in Makefile.base.  From what
I can tell, ctags and etags have a very different set
of default behaviors (and in general, etags looks better
to me).



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13590 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -96,6 +96,15 @@ endif
 #
 # default tools
 # 
+ifndef CHPL_TAGS_UTIL
+ifeq ($(CHPL_EDITOR),vim)
+CHPL_TAGS_UTIL = ctags
+CHPL_TAGS_FLAGS = -w
+else
+CHPL_TAGS_UTIL = etags
+endif
+endif
+
 
 #
 # echo to use with the -n option
