--- a/runtime/etc/Makefile.include
+++ b/runtime/etc/Makefile.include
@@ -14,5 +14,6 @@ all: $(CHPL_CL_OBJS) FORCE
 	$(LD) $(GEN_LFLAGS) $(COMP_GEN_LFLAGS) -o $(TMPBINNAME) -L$(CHAPEL_RT_LIB_DIR) $(TMPBINNAME).o $(CHAPEL_RT_LIB_DIR)/main.o $(CHPL_CL_OBJS) -lchpl -lm $(LIBS)
 	cp $(TMPBINNAME) $(BINNAME)
 	rm $(TMPBINNAME)
+	$(TAGS_COMMAND)
 
 FORCE:
