--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -57,7 +57,7 @@ include $(RUNTIME_ROOT)/make/Makefile.runtime.rules
 $(RUNTIME_LIB): $(RUNTIME_OBJS) $(RUNTIME_DIR_TIMESTAMP)
 	$(AR) -rc $@ $(RUNTIME_OBJS)
 	$(RANLIB) $@
-	-@(which $(CHPL_TAGS_UTIL) > /dev/null 2>&1 && echo "Updating TAGS..." && $(CHPL_TAGS_UTIL) $(CHPL_TAGS_FLAGS) $(ALL_SRCS) include/*.h include/threads-$(CHPL_MAKE_THREADS)/*.h include/comm-$(CHPL_MAKE_COMM)/*.h) || echo "$(CHPL_TAGS_UTIL) not available"
+	-@(which $(CHPL_TAGS_UTIL) > /dev/null 2>&1 && echo "Updating TAGS..." && $(CHPL_TAGS_UTIL) $(CHPL_TAGS_FLAGS) $(ALL_SRCS) $(CURDIR)/include/*.h $(CURDIR)/include/threads-$(CHPL_MAKE_THREADS)/*.h $(CURDIR)/include/comm-$(CHPL_MAKE_COMM)/*.h) || echo "$(CHPL_TAGS_UTIL) not available"
 
 $(RUNTIME_DIR)/main.o: src/$(OBJ_SUBDIR)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)/main.o
 	cp $< $@
