--- a/runtime/comm-gasnet/Makefile.include
+++ b/runtime/comm-gasnet/Makefile.include
@@ -1,5 +1,5 @@
 COMM_OBJDIR = $(RUNTIME_ROOT)/comm-gasnet/$(OBJ_SUBDIR)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
 
-ALL_SRCS += comm-gasnet/*.c
+ALL_SRCS += $(CURDIR)/comm-gasnet/*.c
 
 include $(RUNTIME_ROOT)/comm-gasnet/Makefile.share
