--- a/runtime/threads-pthreads/Makefile.include
+++ b/runtime/threads-pthreads/Makefile.include
@@ -1,5 +1,5 @@
 THREADS_OBJDIR = $(RUNTIME_ROOT)/threads-pthreads/$(OBJ_SUBDIR)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
 
-ALL_SRCS += threads-pthreads/*.c
+ALL_SRCS += $(CURDIR)/threads-pthreads/*.c
 
 include $(RUNTIME_ROOT)/threads-pthreads/Makefile.share
