--- a/runtime/comm-armci/Makefile.include
+++ b/runtime/comm-armci/Makefile.include
@@ -1,5 +1,5 @@
 COMM_OBJDIR = $(RUNTIME_ROOT)/comm-armci/$(OBJ_SUBDIR)/threads-$(CHPL_MAKE_THREADS)/comm-$(CHPL_MAKE_COMM)
 
-ALL_SRCS += comm-armci/*.c
+ALL_SRCS += $(CURDIR)/comm-armci/*.c
 
 include $(RUNTIME_ROOT)/comm-armci/Makefile.share
