Slight cleanups to GASNet code
Along a few routes last week, I discovered that
our normal runtime warnings aren't being
generated for the GASNet communication code, so
attempted to turn them back on with limited
success (documented in Makefile.share).

In particular, since we're compiling the GASNet
headers and don't control them, we can't make
sure that they're as conformant as standard
headers and ours are; so I turned on our
warnings, but then turned off the two (related
to prototypes) that GASNet does not conform to.

I also had to squelch our -std=c99 flag because
we use setenv() to set an environment variable
as a way of requesting that GASNet spawn off
gdb windows for us, and setenv() has apparently
been deprecated in C99.  If anyone has ideas
about other ways to set an environment variable
from within a C program or otherwise to
communicate to GASNet without changing its
interface, I'd be happy for the suggestions.

I did clean up our chpl_cfg_comm.c file a bit,
however, by commenting out the setenv() call
and cleaning up the other problems -- reordered
some things to eliminate unnecessary prototypes
and declared some functions static.

I also simplified the gdb spawn capability to
not be recursive as suggested by Steve a few
weeks ago.  It was overcomplicated.




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13635 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/comm-gasnet/Makefile.share
+++ b/runtime/comm-gasnet/Makefile.share
@@ -11,8 +11,26 @@ GASNET_INSTALL = $(RUNTIME_ROOT)/../third-party/gasnet/install/$(CHPL_MAKE_PLATF
 
 include $(GASNET_INSTALL)/include/udp-conduit/udp-par.mak
 
-INCL_CFLAGS += -I$(GASNET_INSTALL)/include -I$(GASNET_INSTALL)/include/udp-conduit
+# 
+# The following lines try to combine GASNet's favorite C compiler
+# flags with ours.  Unfortunately, we have to override several of our
+# own favorites as follows:
+#
+# -Wno-missing-prototypes must be used because
+# gasneti_linkconfig_idiotcheck isn't prototyped before it's used (boo)
+# and is static, so we can't prototype it for them (awwww).
+#
+# -Wno-strict-prototypes has to be used because most GASNet prototypes
+# aren't strict.
+#
+# -std=c99 doesn't work because setenv() is no longer supported by C99,
+# and it's currently our best way of conveyinng to GASNet to use gdb when
+# it launches the child tasks.  We use -std=gnu89 instead because with
+# our compilers it's what you'd get if you weren't specifying a standard
+# at all.
+#
+RUNTIME_CFLAGS += $(GASNET_CFLAGS) -I$(GASNET_INSTALL)/include -I$(GASNET_INSTALL)/include/udp-conduit -std=gnu89
 
-CC = $(GASNET_CC)
-CPP = $(GASNET_CC)
-RUNTIME_CFLAGS = $(GASNET_CFLAGS) $(INCL_CFLAGS)
+ifdef CHPL_DEVELOPER
+RUNTIME_CFLAGS += -Wno-strict-prototypes -Wno-missing-prototypes -std=gnu89
+endif
