Fixing GASNet build when make OPTIMIZE=1
Added -O0 to the list of flags for the GASNet runtime file
as any other optimization level causes GASNet to throw
an assertion error if it was compiled with debug enabled
(which is how we compile it).

Longer-term, we probably want to build multiple copies of
GASNet and link against the appropriate one depending on
the setting of the OPTIMIZE variable in the Makefile.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13641 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/comm-gasnet/Makefile.share
+++ b/runtime/comm-gasnet/Makefile.share
@@ -29,8 +29,11 @@ include $(GASNET_INSTALL)/include/udp-conduit/udp-par.mak
 # our compilers it's what you'd get if you weren't specifying a standard
 # at all.
 #
-RUNTIME_CFLAGS += $(GASNET_CFLAGS) -I$(GASNET_INSTALL)/include -I$(GASNET_INSTALL)/include/udp-conduit -std=gnu89
+# -O0 needs to be used because GASNet generates an error if client code
+# compiled -O3 is linked to GASNet compiled with debugging enabled
+#
+RUNTIME_CFLAGS += $(GASNET_CFLAGS) -I$(GASNET_INSTALL)/include -I$(GASNET_INSTALL)/include/udp-conduit -std=gnu89 -O0
 
 ifdef CHPL_DEVELOPER
-RUNTIME_CFLAGS += -Wno-strict-prototypes -Wno-missing-prototypes -std=gnu89
+RUNTIME_CFLAGS += -Wno-strict-prototypes -Wno-missing-prototypes
 endif
